--- a/about/assets/css/main.css
+++ b/about/assets/css/main.css
@@ -2301,6 +2301,9 @@ button,
 	width: 100%;
 	height: 100%;
 }
+.image {
+    box-shadow: 0 0 0 4px #ffffff, 0 0 0 5px #e6e6e6;
+}
 
 #staff .staff-name {
 	text-align: center;
@@ -2497,4 +2500,72 @@ button,
   }
 }
 
+/* Spotlight */
 
+.spotlight {
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    margin: 3em 0 3em 0;
+}
+
+.spotlight .image {
+    width: 18%;
+    border-radius: 100%;
+    margin: 0 3em 0 0;
+    display: block;
+}
+
+.spotlight .image img {
+    display: block;
+    border-radius: 100%;
+    width: 100%;
+}
+
+.spotlight .content {
+    width: 70%;
+}
+
+.spotlight .content > :last-child {
+    margin-bottom: 0;
+}
+
+
+@media screen and (max-width: 736px) and (orientation: landscape) {
+
+    .spotlight .image {
+        margin: 0 2em 0 0;
+    }
+
+    .spotlight:nth-child(2n) .image {
+        margin: 0 0 0 2em;
+    }
+
+}
+
+@media screen and (max-width: 736px) and (orientation: portrait) {
+
+    .spotlight {
+        -moz-flex-direction: column !important;
+        -webkit-flex-direction: column !important;
+        -ms-flex-direction: column !important;
+        flex-direction: column !important;
+    }
+
+    .spotlight .image {
+        width: 100%;
+        max-width: 60%;
+        margin: 0 0 2em 0 !important;
+    }
+
+    .spotlight .content {
+        width: 100%;
+        text-align: center !important;
+    }
+
+}
