--- a/iot/assets/css/main.css
+++ b/iot/assets/css/main.css
@@ -1,5 +1,7 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Raleway:400,400italic,700,800");
+/* 思源黑體 */
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap");
 
 /*
 	Highlights by HTML5 UP
@@ -91,6 +93,7 @@ input, select, textarea {
 		background-size: auto,						cover;
 	}
 
+	  
 	html.is-preload *, html.is-preload *:before, html.is-preload *:after {
 		-moz-animation: none !important;
 		-webkit-animation: none !important;
@@ -117,7 +120,9 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #6f7577;
-		font-family: "Raleway", "Helvetica", sans-serif;
+		/* font-family: "Raleway", "Helvetica", sans-serif; */
+		font-family: 'Noto Sans TC', sans-serif;
+
 		font-size: 15pt;
 		font-weight: 400;
 		line-height: 1.75em;
@@ -3142,3 +3147,36 @@ input, select, textarea {
 				}
 
 	}
+
+
+	.video video{
+		position: absolute;
+		background: #fff;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		z-index: -99;
+		pointer-events: none;
+		width: 100%;
+		height: 100%;
+	  }
+
+
+	  .embed-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+        overflow: hidden;
+        max-width: 100%;
+    }
+
+    .embed-container iframe,
+    .embed-container object,
+    .embed-container embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
